--- a/main.css
+++ b/main.css
@@ -51,9 +51,54 @@ main {
 .album img {
   width: 190px;
   height: 190px;
+  border-radius: 3px;
 }
 
 .music-video img {
   width: 280px;
   height: 200px;
+  border-radius: 3px;
+}
+
+img:hover {
+  filter: brightness(70%);
+}
+
+.album__name a {
+  color: #fff;
+  text-decoration-line: none;
+}
+
+.album__name a:hover {
+  text-decoration-line: underline;
+}
+.album__singer,
+.album__singer a {
+  color: #aaa;
+  text-decoration-line: none;
+}
+
+.album__singer a:hover {
+  text-decoration-line: underline;
+}
+
+.arrow {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  width: 40px;
+  height: 40px;
+  background: #fff;
+  box-shadow: 0 4px 5px 0 rgb(0 0 0 / 14%), 0 1px 10px 0 rgb(0 0 0 / 12%),
+    0 2px 4px -1px rgb(0 0 0 / 40%);
+  top: 350px;
+  right: 110px;
+}
+.arrow a:visited {
+  color: #000;
+}
+.arrow a:active {
+  color: #000;
 }
