made another low
made a quick play lists

--- a/nav.css
+++ b/nav.css
@@ -1,10 +1,14 @@
 nav {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 10px 5px;
-  padding: 8px;
+  padding: 10px 8px;
+  position: fixed;
+  background-color: rgba(3, 3, 3, 0.8);
+  z-index: 2;
 }
+
 .nav-md-lists a:link {
   color: #fff;
   text-decoration-line: none;
