--- a/main.css
+++ b/main.css
@@ -5,12 +5,12 @@ main {
   align-items: center;
   padding-top: 90.456px;
 }
-.container {
+.top-container {
   width: 90%;
   height: 100%;
   position: relative;
 }
-.container::after {
+.top-container::after {
   width: 50%;
   height: 544px;
   top: -250px;
@@ -22,6 +22,13 @@ main {
   background-repeat: no-repeat;
   opacity: 0.3;
   z-index: -1;
+}
+
+.lower_container {
+  width: 90%;
+  height: 100px;
+  margin-top: 60px;
+  padding-bottom: 16px;
 }
 
 .sm-titles {
@@ -39,7 +46,7 @@ main {
 
 .main-title {
   font-weight: 700;
-  font-size: 25px;
+  font-size: 35px;
 }
 
 .contents {
@@ -82,6 +89,10 @@ img:hover {
   text-decoration-line: underline;
 }
 
+.quick-music__sm-box a:hover {
+  text-decoration-line: underline;
+}
+
 .arrow {
   position: absolute;
   display: flex;
@@ -93,12 +104,88 @@ img:hover {
   background: #fff;
   box-shadow: 0 4px 5px 0 rgb(0 0 0 / 14%), 0 1px 10px 0 rgb(0 0 0 / 12%),
     0 2px 4px -1px rgb(0 0 0 / 40%);
-  top: 350px;
+  top: 40%;
   right: 110px;
 }
 .arrow a:visited {
   color: #000;
 }
 .arrow a:active {
+  color: #000;
+}
+
+.quick-music {
+  width: 83%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 18px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.xs_album {
+  display: flex;
+  width: 350px;
+}
+.xs_album img {
+  margin-right: 15px;
+  width: 48px;
+  height: 48px;
+  border-radius: 2px;
+}
+
+.quick-music__sm-box {
+  width: 100%;
+}
+
+.quick-music__sm-box i {
+  margin-right: 3px;
+}
+
+.quick-music__sm-box {
+  margin: 0px 2px;
+}
+
+.quick-music__title {
+  width: 100%;
+  margin-bottom: 2px;
+}
+
+.quick-music__title a {
+  text-decoration-line: none;
+  color: #fff;
+}
+
+.quick-music__singer {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.quick-music__singer a {
+  color: #aaa;
+  text-decoration-line: none;
+}
+
+.arrow-2 {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  width: 40px;
+  height: 40px;
+  background: #fff;
+  box-shadow: 0 4px 5px 0 rgb(0 0 0 / 14%), 0 1px 10px 0 rgb(0 0 0 / 12%),
+    0 2px 4px -1px rgb(0 0 0 / 40%);
+  top: 103%;
+  right: 110px;
+}
+
+.arrow-2 a:visited {
+  color: #000;
+}
+.arrow-2 a:active {
   color: #000;
 }
