--- a/main.css
+++ b/main.css
@@ -141,6 +141,9 @@ img:hover {
 
 .quick-music__sm-box i {
   margin-right: 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .quick-music__sm-box {
@@ -166,6 +169,7 @@ img:hover {
 .quick-music__singer a {
   color: #aaa;
   text-decoration-line: none;
+  margin: 0px 2px;
 }
 
 .arrow-2 {
@@ -187,5 +191,173 @@ img:hover {
   color: #000;
 }
 .arrow-2 a:active {
+  color: #000;
+}
+
+.lower_container__mix {
+  width: 90%;
+  height: 70px;
+  margin-top: 60px;
+  padding-bottom: 0px;
+}
+
+.mix-album {
+  width: 180px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 18px;
+}
+
+.mix-album img {
+  width: 180px;
+  height: 180px;
+  border-radius: 3px;
+}
+
+.mix-album a {
+  display: flex;
+  flex-direction: column;
+}
+
+.mix-album__name a {
+  margin-top: 10px;
+  margin-bottom: 3px;
+}
+
+.mix-album__name a:link {
+  color: #fff;
+  text-decoration-line: none;
+}
+.mix-album__name a:visited {
+  color: #fff;
+}
+
+.mix-album__name a:hover {
+  text-decoration-line: underline;
+}
+
+.mix-album__singer {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  word-wrap: break-word;
+  line-height: 1.2em;
+  height: 2.4em;
+}
+
+.mix-album__singer a:link {
+  color: #aaa;
+  text-decoration-line: none;
+}
+.mix-album__singer a:visited {
+  color: #aaa;
+}
+
+.mix-album__singer a:hover {
+  text-decoration-line: underline;
+}
+
+.arrow-3 {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  width: 40px;
+  height: 40px;
+  background: #fff;
+  box-shadow: 0 4px 5px 0 rgb(0 0 0 / 14%), 0 1px 10px 0 rgb(0 0 0 / 12%),
+    0 2px 4px -1px rgb(0 0 0 / 40%);
+  top: 160%;
+  right: 110px;
+}
+
+.arrow-3 a:visited {
+  color: #000;
+}
+.arrow-3 a:active {
+  color: #000;
+}
+
+.lower-container__recommend {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 90%;
+  height: 50px;
+  margin-top: 60px;
+  margin-left: 0px;
+}
+
+.sm-titles__recommend {
+  width: 100%;
+  margin: 0px 10px;
+  padding-top: 16px;
+  padding-bottom: 8px;
+}
+
+.recommend-img img {
+  margin-left: 50px;
+  width: 48px;
+  height: 48px;
+  border-radius: 24px;
+}
+
+.artists {
+  width: 83%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 30px 0px;
+}
+
+.artist {
+  width: 180px;
+  text-align: center;
+}
+
+.artist__name a:link {
+  color: #fff;
+  text-decoration-line: none;
+}
+.artist__name a:visited {
+  color: #fff;
+}
+
+.artist__name a:hover {
+  text-decoration-line: underline;
+}
+
+.artist img {
+  width: 180px;
+  height: 180px;
+  border-radius: 90px;
+}
+
+.subscribers {
+  color: #aaa;
+}
+
+.arrow-4 {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  width: 40px;
+  height: 40px;
+  background: #fff;
+  box-shadow: 0 4px 5px 0 rgb(0 0 0 / 14%), 0 1px 10px 0 rgb(0 0 0 / 12%),
+    0 2px 4px -1px rgb(0 0 0 / 40%);
+  top: 220%;
+  right: 110px;
+}
+
+.arrow-4 a:visited {
+  color: #000;
+}
+.arrow-4 a:active {
   color: #000;
 }
